[package]
name = "market"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

[dependencies]
tokio = { version = "1.44.0", features = ["full"] }
axum = { version = "0.8.1", features = ["multipart", "macros"] }
tower = "0.5.2"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
jsonwebtoken = "9.3.1"
tower-http = { version = "0.6.2", features = ["fs", "limit"] }
chrono = { version = "0.4.40", features = ["serde"] }
anyhow = "1.0.97"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio-native-tls",
    "postgres",       
    "uuid",        
    "chrono",                  
] }
headers = "0.4.0"
argon2 = "0.5.3"
rand = "0.8.0"
hex = "0.4.3"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
dotenv = "0.15.0"
mime = "0.3.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
validator = "0.20.0"